# toyota-motor-fault-detector

./: .gitignore  README.md  index.html
backend/: _verify.py  app.py  config.py  model.py  pyproject.toml  requirements.txt  serial_reader.py
backend/ML/: lstm_autoencoder.pth  scaler_current.pkl
backend/arduino_example/: motor_telemetry.ino
backend/model/: __init__.py  fault_model.py  ml.py  scaler_rise.pkl
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  styles.css
frontend/src/components/: EventLog.jsx  FaultBanner.jsx  Header.jsx  HealthGauge.jsx  MetricCard.jsx  Sparkline.jsx  TelemetryChart.jsx
frontend/src/lib/: useTelemetry.js
frontend2/: app.js  index.html  styles.css
