[project]
name = "motor-fault-backend"
version = "1.0.0"
description = "Flask backend: reads motor telemetry over UART, runs the ML model, streams fault predictions over WebSocket"
requires-python = ">=3.9"
dependencies = [
    "flask>=3.0",
    "flask-sock>=0.7",
    "pyserial>=3.5",
    # needed to load ML model
    "scikit-learn>=1.3",
    "joblib>=1.3",
    "numpy>=1.24",
]
